# quality-of-prague

./: .env.example  .gitignore  README.md  app.py  config.py  data_config.py  dataset_config.py  pyproject.toml  requierements.txt  requirements.txt
assets/: global.css
callbacks/: __init__.py  dashboard_callbacks.py  district_map_callbacks.py
components/: __init__.py
components/config/: __init__.py  layout.py  theme.py
components/graphs/: __init__.py
components/graphs/maps/: __init__.py
components/navbar/: __init__.py  navbar.py
components/sidebar/: __init__.py  sidebar.py
components/ui/: __init__.py  brand.py  category_card.py  feature_card.py  icon.py  image.py  info_card.py  info_card_row.py  nav_item.py  page_heading.py
data/: README.md
data/mestske_casti/: README.md  mestske_casti.geojson
data/objekty_mestske_policie_praha/: README.md  objekty_mestske_policie_praha.geojson
data/parkovaci_automaty/: README.md  parkovaci_automaty.geojson
data/vstupy_do_metra/: vstupy_do_metra.geojson
notebooks/: README.md
notebooks/experiments/: experiment_points_inside_polygons.ipynb
notebooks/exploratory/: 01_explore_objekty_mestske_policie_praha.ipynb  03_parkovaci_automaty.ipynb  04_vstupy_do_metra.ipynb
pages/: about.py  dashboard.py  datasets.py  district_info.py  districts.py  home.py
utils/: cache.py  data_loader.py  geospatial_utils.py  readme_utils.py
utils/districts/: district_utils.py
utils/loaders/: data_loader.py  districts_loader.py  subway_loader.py
utils/scatter/: scatter_colors.py  scatter_configs.py  scatter_utils.py
(+9 files in other folders)
