[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quality-of-prague"
version = "0.1.0"
description = "A Dash application for visualizing quality metrics of Prague districts"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Joseph Meurer"},
]

dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "flask-caching>=2.1.0",
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools]
packages = ["components", "pages", "utils", "callbacks"]

[project.scripts]
quality-of-prague = "app:app.run"

